--- a/w26e72_VersionControl/w26e72_VersionControl/ResourceVC.resx
+++ b/w26e72_VersionControl/w26e72_VersionControl/ResourceVC.resx
@@ -118,9 +118,12 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Add" xml:space="preserve">
-    <value />
+    <value>Hozzáadás</value>
   </data>
   <data name="LastName" xml:space="preserve">
     <value />
+  </data>
+  <data name="WriteButton" xml:space="preserve">
+    <value>Fájlba kiírás</value>
   </data>
 </root>
