--- a/w26e72_VersionControl/w26e72_VersionControl/ResourceVC.resx
+++ b/w26e72_VersionControl/w26e72_VersionControl/ResourceVC.resx
@@ -120,6 +120,9 @@
   <data name="Add" xml:space="preserve">
     <value>Hozzáadás</value>
   </data>
+  <data name="DeleteButton" xml:space="preserve">
+    <value>Törlés</value>
+  </data>
   <data name="LastName" xml:space="preserve">
     <value />
   </data>
